Signal JVM to use incubator module when running tests.