@@ -185,6 +185,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
+                <configuration>
+                    <argLine>--add-modules=jdk.incubator.httpclient</argLine> <!-- Signal JVM to use HttpClient incubator module -->
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
